[js] scroll reveal slide left and right

--- a/style.css
+++ b/style.css
@@ -853,8 +853,12 @@ body {
   width: 90%;
   border: #333 1px solid;
   border-radius: 10px;
-  padding: 30px 0;
+  padding: 10px 0;
   margin-top: 30px;
+}
+
+.project-each .image-container-left {
+  margin-left: 30px;
 }
 
 .project-each .image-container-left .each-project-img {
@@ -867,7 +871,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-left: 50px;
+  margin: 0 20px 0 30px;
   max-width: 500px;
   position: relative;
 }
@@ -1117,18 +1121,21 @@ body {
     width: 100%;
     height: 40%;
     justify-content: space-around;
-    margin-bottom: 20px;
+    margin: 0 0 20px 0;
+    padding: 0;
   }
 
   .main-container .details .details-wrap .my-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 10px;
   }
 
   .main-container .details .details-wrap img {
     width: 20%;
     height: auto;
+    margin-right: 10px;
   }
 
   .main-container .details .details-description-wrap {
@@ -1150,6 +1157,16 @@ body {
 
   .preview-title {
     display: none;
+  }
+
+  .skills-container {
+    flex-direction: column;
+  }
+
+  .skills-container .container-divide-hc,
+  .skills-container .container-divide-jr {
+    width: 100%;
+    margin: 0;
   }
 
   .skillbox {
@@ -1183,5 +1200,37 @@ body {
   .preview-contacts:hover .icons,
   .preview-contacts:hover .contents {
     display: none;
+  }
+
+  .project-each .image-container-left {
+    margin-left: 15px;
+  }
+
+  .project-each .image-container-left .each-project-img {
+    width: 160px;
+    height: 210px;
+  }
+
+  .project-each .des-container-right {
+    margin: 0 15px 0 20px;
+    max-width: 400px;
+  }
+
+  .project-each .des-container-right .each-project-title {
+    font-size: 15px;
+  }
+
+  .project-each .des-container-right .each-project-description {
+    font-size: 15px;
+  }
+
+  .project-each .des-container-right .each-project-tag {
+    font-size: 13px;
+    padding: 3px 7px;
+  }
+
+  .project-each .des-container-right .each-project-stacks span {
+    font-size: 15px;
+    padding: 3px 10px;
   }
 }
