--- a/style.css
+++ b/style.css
@@ -301,14 +301,13 @@ body {
   flex-direction: column;
   width: 40%;
   height: 100%;
-  margin-right: 15px;
-  margin-left: 50px;
+  margin: 0 20px 0 30px;
 }
 
 .main-container .details .details-wrap img {
   width: 50%;
   min-width: 100px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .main .main-container .details .my-info li {
@@ -596,6 +595,7 @@ body {
 .skills {
   position: relative;
   background-color: #333;
+  color: #fff;
 }
 
 .skills p {
@@ -859,12 +859,32 @@ body {
 
 .project-each .image-container-left {
   margin-left: 30px;
+  position: relative;
 }
 
 .project-each .image-container-left .each-project-img {
   width: 200px;
   height: 270px;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s ease;
+}
+
+.project-each .image-container-left .each-project-gif {
+  width: 200px;
+  height: 270px;
+  transition: 0.5s ease;
+}
+.project-each .image-container-left:hover .each-project-img {
+  width: 400px;
+  height: 500px;
+  opacity: 0;
+}
+.project-each .image-container-left:hover .each-project-gif {
+  width: 400px;
+  height: 500px;
 }
 
 .project-each .des-container-right {
@@ -1144,6 +1164,7 @@ body {
     justify-content: space-between;
     align-items: flex-end;
     width: 100%;
+    margin: 20px;
   }
 
   .main .main-container .preview {
@@ -1211,9 +1232,24 @@ body {
     height: 210px;
   }
 
+  .project-each .image-container-left .each-project-gif {
+    width: 160px;
+    height: 210px;
+  }
+  .project-each .image-container-left:hover .each-project-img {
+    width: 300px;
+    height: 380px;
+    opacity: 0;
+  }
+  .project-each .image-container-left:hover .each-project-gif {
+    width: 300px;
+    height: 380px;
+  }
+
   .project-each .des-container-right {
     margin: 0 15px 0 20px;
     max-width: 400px;
+    justify-content: center;
   }
 
   .project-each .des-container-right .each-project-title {
@@ -1222,6 +1258,7 @@ body {
 
   .project-each .des-container-right .each-project-description {
     font-size: 15px;
+    margin: 20px 0;
   }
 
   .project-each .des-container-right .each-project-tag {
@@ -1232,5 +1269,20 @@ body {
   .project-each .des-container-right .each-project-stacks span {
     font-size: 15px;
     padding: 3px 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .project-each .des-container-right {
+    padding: 20px 0;
+    justify-content: space-between;
+  }
+
+  .project-each .des-container-right .each-project-tag {
+    display: none;
+  }
+
+  .project-each .des-container-right .each-project-stacks span {
+    display: none;
   }
 }
