--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Sunflower:wght@300&display=swap");
 /* :root {
 } */
 
@@ -10,8 +10,128 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
+}
+
+#canvas {
+  background-color: #2c343f;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.home-wrap {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-color: transparent;
+}
+
+.home-wrap .home-info {
+  background-color: #fff;
+  width: 600px;
+  height: 400px;
+  color: #5cd3ad;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  padding: 30px 0;
+  animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s alternate;
+}
+
+.home-info h1 {
+  font-size: 50px;
+}
+
+.home-info .hello {
+  font-size: 180px;
+  font-weight: bold;
+}
+
+@keyframes anime {
+  0% {
+    width: 600px;
+    height: 400px;
+    background: #f0f0f0;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  12.5% {
+    width: 60px;
+    height: 400px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  25% {
+    width: 60px;
+    height: 60px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  45% {
+    width: 60px;
+    height: 60px;
+    background: #a1d1c2;
+    transform: rotate(20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  50% {
+    width: 60px;
+    height: 60px;
+    background: #92d6c0;
+    transform: rotate(-20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  52.5% {
+    width: 60px;
+    height: 60px;
+    background: #7fd4b9;
+    transform: rotate(10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  55% {
+    width: 60px;
+    height: 60px;
+    background: #6ed6b5;
+    transform: rotate(-10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  87.5% {
+    width: 60px;
+    height: 400px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  100% {
+    width: 600px;
+    height: 400px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
 }
 
 .section {
@@ -21,6 +141,7 @@ body {
   justify-content: center;
   align-items: center;
   transition: background-color 1s ease;
+  z-index: 999;
 }
 
 .section .wrap {
@@ -28,7 +149,7 @@ body {
   margin: 0;
   padding: 50px;
   max-width: 1300px;
-  background-color: transparent;
+  background-color: #fff;
 }
 
 .section h1 {
@@ -43,26 +164,8 @@ body {
   margin: 10px 0;
 }
 
-/* .main,
-.main .wrap {
-  background: linear-gradient(#fff, #eee);
-}
-.skills,
-.skills .wrap {
-  background: linear-gradient(#eee, #ddd);
-}
-.projects,
-.projects .wrap {
-  background: linear-gradient(#ddd, #ccc);
-}
- */
-/* .contact,
-.contact .wrap {
-  background: linear-gradient(#fff, #dbe6fd);
-} */
-
 /* HOME */
-.section.home {
+/* .section.home {
   max-width: none;
 }
 
@@ -76,7 +179,6 @@ body {
 .home {
   width: 100%;
   height: 100vh;
-  /* background-color: #9fbfff; */
   background: linear-gradient(-45deg, #9fbfff, #00008b, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
@@ -84,9 +186,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  inset: 0px;
-  z-index: -100;
 }
 
 @keyframes gradient {
@@ -99,171 +198,21 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
-
-.home .home-wrap {
-  width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  background-attachment: fixed;
-  z-index: 1;
-}
-
-.home .home-wrap h1 {
-  margin-bottom: 20px;
-}
-
-.home .home-wrap h3 {
-  margin: 10px 0;
-}
-
-.home .home-wrap .btn-start {
-  border-top: 50px solid red;
-  border-bottom: 50px solid none;
-  border-right: 50px solid transparent;
-  border-left: 50px solid transparent;
-  font-size: 15px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  cursor: pointer;
-}
-
-.home .home-wrap .btn-start:focus {
-  outline: none;
-}
-
-.home .home-wrap .line {
-  width: 0;
-  transition: 1.5s linear;
-}
-
-.home .home-image-container {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.home .home-image-container img {
-  width: 100px;
-}
-.home .home-image-container .cloud1 {
-  top: 5%;
-  left: 50px;
-}
-.home .home-image-container .cloud2 {
-  top: 5%;
-  right: 50px;
-}
-.home .home-image-container .cloud3 {
-  width: 70px;
-  height: auto;
-  opacity: 0.7;
-  top: 25%;
-  left: 50%;
-}
-.home .home-image-container .cloud4 {
-  top: 25%;
-  right: 50px;
-}
-.home .home-image-container .cloud5 {
-  top: 50%;
-  left: 100px;
-}
-.home .home-image-container .cloud6 {
-  top: 50%;
-  right: 50px;
-}
-.home .home-image-container .cloud7 {
-  top: 75%;
-  left: 50px;
-}
-.home .home-image-container .cloud8 {
-  top: 75%;
-  right: 50px;
-}
-
-/* home의 bottom image (main안에 있음)*/
-.main .home-bottom-container {
-  position: absolute;
-  top: -240px;
-  left: 0;
-  width: 100%;
-  height: 250px;
-  z-index: -1;
-}
-
-.bottom-image {
-  position: absolute;
-  bottom: -5%;
-  width: 63%;
-}
-
-.bottom-image.image-left {
-  left: -15%;
-}
-
-.bottom-image.image-right {
-  right: -10%;
-  transform: scaleX(-1);
-}
-
-.home-bottom-container .dots {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 40px;
-  height: auto;
-  opacity: 0.7;
-  transform: translateX(-120%) scaleY(-1) rotate(45deg);
-}
-
-.home-bottom-container .dot {
-  position: absolute;
-  bottom: 20%;
-  left: 50%;
-  width: 8px;
-  height: auto;
-  opacity: 0.7;
-  transform: translate(-410%, -50%);
-}
-
-.home-bottom-container .dot.dot2 {
-  transform: translate(-250%, -50%);
-}
-
-.home-bottom-container .down {
-  position: absolute;
-  bottom: 17px;
-  left: 50%;
-  width: 40px;
-  height: auto;
-  cursor: pointer;
-  transform: translate(-70%, -10%);
-  transition: 1s ease-in-out;
-  padding: 20px;
-  box-sizing: content-box;
-}
-
-.home-bottom-container .down:hover {
-  transform: translate(-60%, 20%) rotate(120deg);
-}
+} */
 
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
 .main {
   display: flex;
-  flex-direction: column;
-  /* parallax */
+  width: 100%;
+  height: 100vh;
   margin-top: 100vh;
-  /* image container absolute하기 위함 */
+  flex-direction: column;
   position: relative;
+}
+
+.main .wrap {
+  height: 100%;
 }
 
 .main h1 {
@@ -305,8 +254,7 @@ body {
 }
 
 .main-container .details .details-wrap img {
-  width: 50%;
-  min-width: 100px;
+  width: 180px;
   margin-bottom: 50px;
 }
 
@@ -321,10 +269,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-  width: 60%;
-  height: 100%;
-  margin-left: 15px;
-  margin-right: 50px;
+  width: 80%;
+  height: 120%;
+  margin: 20px 0;
 }
 
 .main-container .details .details-description-wrap .my-description {
@@ -594,8 +541,14 @@ body {
 }
 
 /* Skills */
-.skills {
+.section.skills {
   position: relative;
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+}
+
+.section.skills .wrap {
   background-color: #333;
   color: #fff;
 }
@@ -657,7 +610,7 @@ body {
 
 .skill-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-  transition: transform 0.8s;
+  transition: transform 0.5s;
 }
 
 .flip-card-front,
@@ -745,6 +698,11 @@ body {
 }
 
 /* Projects */
+.section.projects {
+  width: 100%;
+  background-color: #fff;
+}
+
 .projects-container {
   display: flex;
   flex-direction: column;
@@ -911,12 +869,17 @@ body {
   border-radius: 5px;
 }
 
+.project-each .des-container-right .each-project-stacks {
+  display: flex;
+  flex-wrap: wrap;
+}
 .project-each .des-container-right .each-project-stacks span {
   font-size: 17px;
   padding: 5px 15px;
   background-color: #fff;
   color: #333;
   border-radius: 30px;
+  margin-top: 10px;
   margin-right: 10px;
 }
 
@@ -1146,19 +1109,20 @@ body {
     height: 40%;
     justify-content: space-around;
     align-items: center;
-    margin: 0 0 20px 0;
+    margin: 20px 0;
     padding: 0;
   }
 
   .main-container .details .details-wrap .my-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    height: 100%;
+    justify-content: space-around;
     margin-left: 10px;
   }
 
   .main-container .details .details-wrap img {
-    width: 20%;
+    width: 150px;
     height: auto;
     margin: 10px;
   }
