--- a/style.css
+++ b/style.css
@@ -14,26 +14,23 @@ body {
   overflow-x: hidden;
 }
 
-#canvas {
-  background-color: #2c343f;
+#fullpage .section.home-wrap {
   width: 100%;
   height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.home-wrap {
-  width: 100%;
-  height: 100vh;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
+}
+
+#canvas {
+  background-color: #2c343f;
+  position: absolute;
   top: 0;
   left: 0;
-  pointer-events: none;
-  background-color: transparent;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
 }
 
 .home-wrap .home-info {
@@ -48,6 +45,7 @@ body {
   text-align: center;
   padding: 30px 0;
   animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s alternate;
+  pointer-events: none;
 }
 
 .home-info h1 {
@@ -141,7 +139,7 @@ body {
   justify-content: center;
   align-items: center;
   transition: background-color 1s ease;
-  z-index: 999;
+  z-index: 1;
 }
 
 .section .wrap {
@@ -202,22 +200,32 @@ body {
 
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
-.main {
+#fullpage .section.main {
   display: flex;
   width: 100%;
   height: 100vh;
-  margin-top: 100vh;
   flex-direction: column;
   position: relative;
 }
 
 .main .wrap {
-  height: 100%;
+  height: 95vh;
+  padding: 0;
 }
 
 .main h1 {
+  width: 200px;
   height: 5vh;
   margin-bottom: 0;
+}
+.main h1::before {
+  content: "";
+  width: 1200px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -1030px;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .main-container {
@@ -232,7 +240,18 @@ body {
   min-height: 770px;
   margin-top: 20px;
   padding: 6px 3px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  border: 1px solid #2c343f;
+  /* box-shadow: 300px 0 10px 5px #2c343f; */
+}
+.main-container::before {
+  content: "";
+  width: 1000%;
+  height: 103%;
+  position: absolute;
+  top: -1.5%;
+  left: -0.5%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -1;
 }
 
 .main .main-container .details {
@@ -241,7 +260,7 @@ body {
   align-items: center;
   width: 100%;
   height: 70%;
-  padding: 30px 30px;
+  padding: 30px;
 }
 
 .main-container .details .details-wrap {
