--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   overflow-x: hidden;
 }
 
-#fullpage .section.home-wrap {
+.section.home-wrap {
   width: 100%;
   height: 100vh;
   position: relative;
@@ -135,6 +135,7 @@ body {
 .section {
   background-color: #fff;
   margin: 0;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,16 +201,16 @@ body {
 
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
-#fullpage .section.main {
+.section.main {
   display: flex;
   width: 100%;
-  height: 100vh;
   flex-direction: column;
   position: relative;
 }
 
 .main .wrap {
-  height: 95vh;
+  /* height: 95vh; */
+  height: 100%;
   padding: 0;
 }
 
@@ -229,8 +230,9 @@ body {
 }
 
 .main-container {
-  /* background-color: #e0ffff 8adaf5a8 9fbfff; */
-  background-color: #dbe6fd;
+  /* background-color: #dbe6fd; */
+  background-color: #2c343f;
+  color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -241,7 +243,7 @@ body {
   margin-top: 20px;
   padding: 6px 3px;
   border: 1px solid #2c343f;
-  /* box-shadow: 300px 0 10px 5px #2c343f; */
+  /* box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2); */
 }
 .main-container::before {
   content: "";
@@ -722,6 +724,10 @@ body {
   background-color: #fff;
 }
 
+.projects .wrap {
+  height: 100%;
+}
+
 .projects-container {
   display: flex;
   flex-direction: column;
@@ -762,7 +768,7 @@ body {
 .category-btn.selected,
 .category-btn:hover {
   /* 98ddca 8ec51794 9fbfff dbe6fd*/
-  background-color: #dbe6fd;
+  background-color: #2c343f;
   transform: scaleY(1.3) translateY(-4px);
 }
 
@@ -812,6 +818,7 @@ body {
 .projects-container .project-list {
   margin: 0;
   width: 100%;
+  height: 60%;
   transition: all 0.5s ease;
 }
 
@@ -821,7 +828,9 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background-color: #dbe6fd;
+  height: 100%;
+  /* background-color: #dbe6fd; */
+  background-color: #2c343f;
   padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -831,11 +840,14 @@ body {
 .project-list .projects-list-wrap .project-each {
   display: flex;
   justify-content: center;
-  width: 90%;
+  background-color: #f5c156;
+  width: 500px;
+  height: 280px;
   border: #333 1px solid;
   border-radius: 10px;
   padding: 10px 0;
   margin-top: 30px;
+  margin-right: 30px;
 }
 
 .project-each .image-container-left {
@@ -844,8 +856,8 @@ body {
 }
 
 .project-each .image-container-left .each-project-img {
-  width: 200px;
-  height: 270px;
+  width: 180px;
+  height: 250px;
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -854,8 +866,8 @@ body {
 }
 
 .project-each .image-container-left .each-project-gif {
-  width: 200px;
-  height: 270px;
+  width: 180px;
+  height: 250px;
   transition: 0.5s ease;
 }
 .project-each .image-container-left:hover .each-project-img {
@@ -911,7 +923,6 @@ body {
 }
 
 /* Contact */
-/* 명함이 탁 나오는 그런 애니메이션 구현? */
 .section.contact {
   padding-bottom: 0;
 }
@@ -988,67 +999,6 @@ body {
   top: -70px;
   left: 200px;
   text-transform: uppercase;
-}
-
-.contact-links .wrap {
-  background: no-repeat top url("icons/flamenco-247.png");
-  background-size: 100%;
-  /* background-color: #aaa; deedf0*/
-  width: 100%;
-  height: 100%;
-  font-size: 35px;
-  text-align: center;
-  margin: 0;
-  padding-top: 50px;
-  padding-bottom: 10px;
-  position: relative;
-  z-index: 0;
-  min-width: 880px;
-}
-
-.contact-links .contact-image-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-.contact-image-container img {
-  position: absolute;
-  width: 13%;
-  height: auto;
-  bottom: 10px;
-  z-index: 1;
-}
-
-.contact-image-container .house1 {
-  bottom: 30px;
-  right: 12%;
-  max-width: 150px;
-  min-width: 50px;
-}
-
-.contact-image-container .house2 {
-  left: 8%;
-  max-width: 150px;
-  min-width: 50px;
-}
-
-.contact-image-container .house3 {
-  left: 18%;
-  max-width: 150px;
-  min-width: 50px;
-}
-
-.contact-image-container .building {
-  bottom: 90px;
-  left: 50%;
-  transform: translateX(-50%) scaleX(-1);
-  width: 450px;
-  height: 500px;
-  z-index: 0;
 }
 
 .contact-links a {
