--- a/style.css
+++ b/style.css
@@ -14,6 +14,38 @@ body {
   overflow-x: hidden;
 }
 
+.section {
+  background-color: #fff;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 1s ease;
+  z-index: 1;
+}
+
+.section .wrap {
+  width: 70%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  max-width: 1300px;
+  background-color: #fff;
+}
+
+.section h1 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.line {
+  height: 2px;
+  width: 100px;
+  background-color: #fff;
+  margin: 10px 0;
+}
+
 .section.home-wrap {
   width: 100%;
   height: 100vh;
@@ -57,203 +89,36 @@ body {
   font-weight: bold;
 }
 
-@keyframes anime {
-  0% {
-    width: 600px;
-    height: 400px;
-    background: #f0f0f0;
-    transform: rotate(0deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  12.5% {
-    width: 60px;
-    height: 400px;
-    background: #f8f8f8;
-    transform: rotate(0deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  25% {
-    width: 60px;
-    height: 60px;
-    background: #f8f8f8;
-    transform: rotate(0deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  45% {
-    width: 60px;
-    height: 60px;
-    background: #a1d1c2;
-    transform: rotate(20deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  50% {
-    width: 60px;
-    height: 60px;
-    background: #92d6c0;
-    transform: rotate(-20deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  52.5% {
-    width: 60px;
-    height: 60px;
-    background: #7fd4b9;
-    transform: rotate(10deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  55% {
-    width: 60px;
-    height: 60px;
-    background: #6ed6b5;
-    transform: rotate(-10deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  87.5% {
-    width: 60px;
-    height: 400px;
-    background: #5cd3ad;
-    transform: rotate(0deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-  100% {
-    width: 600px;
-    height: 400px;
-    background: #5cd3ad;
-    transform: rotate(0deg);
-    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
-      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
-  }
-}
-
-.section {
-  background-color: #fff;
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 1s ease;
-  z-index: 1;
-}
-
-.section .wrap {
-  width: 100%;
-  margin: 0;
-  padding: 50px;
-  max-width: 1300px;
-  background-color: #fff;
-}
-
-.section h1 {
-  font-size: 40px;
-  margin-bottom: 30px;
-}
-
-.line {
-  height: 2px;
-  width: 100px;
-  background-color: #fff;
-  margin: 10px 0;
-}
-
-/* HOME */
-/* .section.home {
-  max-width: none;
-}
-
-.section.home img {
-  position: absolute;
-  top: 20px;
-  height: 50px;
-  transform: rotate(180deg);
-}
-
-.home {
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(-45deg, #9fbfff, #00008b, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-} */
-
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
 .section.main {
-  display: flex;
   width: 100%;
-  flex-direction: column;
-  position: relative;
 }
 
 .main .wrap {
-  /* height: 95vh; */
-  height: 100%;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main h1 {
   width: 200px;
-  height: 5vh;
-  margin-bottom: 0;
-}
-.main h1::before {
-  content: "";
-  width: 1200px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: -1030px;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: fit-content;
+  margin-bottom: 10px;
 }
 
 .main-container {
-  /* background-color: #dbe6fd; */
   background-color: #2c343f;
   color: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 80vh;
-  min-height: 770px;
-  margin-top: 20px;
-  padding: 6px 3px;
-  border: 1px solid #2c343f;
-  /* box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2); */
-}
-.main-container::before {
-  content: "";
-  width: 1000%;
-  height: 103%;
-  position: absolute;
-  top: -1.5%;
-  left: -0.5%;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: -1;
+  height: 75%;
+  min-height: 470px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
 .main .main-container .details {
@@ -261,60 +126,55 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 70%;
-  padding: 30px;
+  margin: 30px 0;
 }
 
-.main-container .details .details-wrap {
+/* .main-container .details .details-wrap {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
-  width: 40%;
   height: 100%;
   margin: 0 20px 0 30px;
 }
 
 .main-container .details .details-wrap img {
-  width: 180px;
-  margin-bottom: 50px;
+  width: 140px;
 }
 
 .main .main-container .details .my-info li {
   list-style-type: none;
   margin-bottom: 5px;
   letter-spacing: 1px;
-}
+} */
 
 .main-container .details .details-description-wrap {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  width: 80%;
-  height: 120%;
-  margin: 20px 0;
+  width: 100%;
+  position: relative;
+  margin: 0 30px;
 }
 
-.main-container .details .details-description-wrap .my-description {
-  margin-bottom: 5%;
+.details .details-description-wrap .my-description {
   line-height: 200%;
-  font-size: 17px;
+  font-size: 16px;
   word-break: keep-all;
 }
 
-.main .main-container .details .btn-resume {
+.details .details-description-wrap .btn-resume {
   background-color: #fff;
   color: #9fbfff;
-  width: 120px;
+  width: 110px;
   height: 40px;
   border: 2px solid #9fbfff;
   border-radius: 1px;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: bold;
   letter-spacing: 1px;
   padding: 5px 10px;
   cursor: pointer;
   transition: 0.4s ease;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .main .main-container .details .btn-resume:hover {
@@ -322,13 +182,16 @@ body {
   color: #fff;
 }
 
+/* main-container -> preview */
 .main .main-container .preview {
   display: flex;
-  width: 100%;
-  height: 40%;
-  margin-top: 6px;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 80%;
+  min-height: 170px;
+  max-height: 280px;
+  margin-bottom: 3px;
 }
 
 .main-container .preview .preview-skills,
@@ -363,6 +226,7 @@ body {
 .main-container .preview .preview-projects .this,
 .main-container .preview .preview-contacts .this {
   width: 100%;
+  letter-spacing: 3px;
 }
 
 .main-container .preview .preview-skills:hover .this,
@@ -449,15 +313,16 @@ body {
   transition-delay: 0.8s;
   /* transition: 2s ease-in-out; */
   font-size: 13px;
-  background: rgba(0, 128, 0, 0.8);
+  background: rgba(135, 207, 235, 0.8);
   color: #fff;
 }
 
 .skillbox.bot .skillbox.right {
   transition-delay: 1s;
   /* transition: 2.5s ease-in-out; */
-  background-color: rgba(135, 207, 235, 0.8);
+  background-color: rgba(0, 128, 0, 0.8);
   color: #fff;
+  font-size: 13px;
 }
 
 .preview-projects .image-container {
@@ -470,6 +335,8 @@ body {
   height: 120%;
   opacity: 0;
   transition: all 0.3s ease-in;
+  color: #fff;
+  font-size: 13px;
 }
 
 .preview-projects:hover .image-container,
@@ -491,7 +358,7 @@ body {
 }
 
 .preview .preview-projects .image-container .each-image img {
-  width: 200%;
+  width: 150%;
   height: 100%;
   margin-top: 5%;
 }
@@ -543,6 +410,7 @@ body {
   font-size: 25px;
   margin-left: 10px;
   pointer-events: none;
+  color: #fff;
 }
 
 .preview-contacts .contents {
@@ -572,6 +440,10 @@ body {
 .section.skills .wrap {
   background-color: #333;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .skills p {
@@ -580,11 +452,13 @@ body {
 }
 
 .main-stacks {
+  width: 100%;
   margin-bottom: 20px;
 }
 
 .main-stacks-title,
 .sub-stacks-title {
+  font-size: 17px;
   margin-bottom: 10px;
 }
 
@@ -604,9 +478,9 @@ body {
   /* 00ced1 b0efeb 28b5b5 1597bb 1597bb91 9fbfff*/
   background-color: transparent;
   width: 100%;
-  height: 150px;
+  height: 135px;
   color: #333;
-  font-size: 20px;
+  font-size: 19px;
   cursor: pointer;
   overflow: hidden;
   border-radius: 10px;
@@ -688,6 +562,8 @@ body {
   color: black;
   transform: rotateY(180deg);
   text-align: left;
+  word-break: keep-all;
+  padding: 0 20px;
 }
 .flip-card-back p {
   display: block;
@@ -707,8 +583,8 @@ body {
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  width: 220px;
-  height: 70px;
+  width: 210px;
+  height: 60px;
   color: #333;
   font-size: 17px;
   overflow: hidden;
@@ -725,10 +601,16 @@ body {
 }
 
 .projects .wrap {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .projects-container {
+  width: 100%;
+  height: 80%;
+  max-height: 680px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -818,7 +700,7 @@ body {
 .projects-container .project-list {
   margin: 0;
   width: 100%;
-  height: 60%;
+  height: 85%;
   transition: all 0.5s ease;
 }
 
@@ -829,7 +711,6 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
-  /* background-color: #dbe6fd; */
   background-color: #2c343f;
   padding: 20px;
   border-bottom-left-radius: 5px;
@@ -841,8 +722,8 @@ body {
   display: flex;
   justify-content: center;
   background-color: #f5c156;
-  width: 500px;
-  height: 280px;
+  width: 320px;
+  height: 200px;
   border: #333 1px solid;
   border-radius: 10px;
   padding: 10px 0;
@@ -856,8 +737,8 @@ body {
 }
 
 .project-each .image-container-left .each-project-img {
-  width: 180px;
-  height: 250px;
+  width: 130px;
+  height: 170px;
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -866,8 +747,8 @@ body {
 }
 
 .project-each .image-container-left .each-project-gif {
-  width: 180px;
-  height: 250px;
+  width: 130px;
+  height: 170px;
   transition: 0.5s ease;
 }
 .project-each .image-container-left:hover .each-project-img {
@@ -924,97 +805,134 @@ body {
 
 /* Contact */
 .section.contact {
-  padding-bottom: 0;
+  background-color: #333;
+  color: #fff;
+  width: 100%;
+  flex-direction: column;
 }
 
-.section.contact h1 {
-  margin-bottom: 0;
+.section.contact .wrap {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: none;
 }
 
 .contact-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 400px;
   margin: 20px 0;
   padding: 0;
 }
 
 .contact-container .contact-info {
-  position: relative;
-  width: 450px;
-  height: 100%;
-}
-
-.contact-container .contact-info .info-wrap {
-  background-color: transparent;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 385px;
-  height: 285px;
-  border-radius: 10px;
-  margin-top: 85px;
-  margin-left: 52px;
-  position: relative;
-  z-index: 1;
+  align-items: center;
+  width: 25%;
+  height: 100%;
+  min-width: 400px;
+  min-height: 210px;
 }
 
-.contact-info .info-wrap .info {
+.contact-info h3 {
+  width: 50px;
+  height: 50px;
+  background-color: #e6616b;
+  line-height: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+
+.contact-info .info {
   width: 100%;
-  height: 80px;
+  height: 50px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   font-size: 30px;
-  margin-left: 20px;
   color: #000;
+  margin: 10px;
 }
 
-.contact-info .info-wrap .info i,
-.contact-info .info-wrap .info .icon {
+.contact-info .info span {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e6616b;
+}
+
+.contact-info .info i,
+.contact-info .info .icon {
   width: 30px;
   text-align: center;
 }
 
-.contact-info .info-wrap .kktalk {
+.contact-info .info .kktalk {
   font-size: 30px;
   margin-left: 20px;
 }
 
-.contact-info .info-wrap .info.email a,
-.contact-info .info-wrap .info.mobile p,
-.contact-info .info-wrap .kktalk p {
+.contact-info .info.email a,
+.contact-info .info.mobile p,
+.contact-info .kktalk p {
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
   letter-spacing: 1px;
-  width: 100%;
+  width: 300px;
+  height: 100%;
   text-align: center;
+  line-height: 50px;
+  background-color: #5cd3ad;
 }
 
-.contact-container .contact-info h3 {
-  position: absolute;
-  top: -70px;
-  left: 200px;
-  text-transform: uppercase;
+.contact-container .contact-visits {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 50px;
+  margin-top: 20px;
 }
 
-.contact-links a {
+.contact-container .contact-visits a {
+  width: 50px;
+  height: 50px;
+  font-size: 35px;
+  text-align: center;
+  line-height: 50px;
+  margin: 20px;
+  background-color: #f5c156;
   color: #fff;
   transition: 0.3s ease;
-  margin-right: 10px;
-  text-decoration: none;
 }
 
-.contact-links a:hover {
-  color: green;
+.contact-container .contact-visits a:hover {
+  color: black;
 }
 
-.contact-links p {
-  font-size: 14px;
+.section.contact .contact-links {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
   color: #fff;
+  background-color: black;
 }
 
 /* arrow up button */
@@ -1059,6 +977,81 @@ body {
   /* display: block; */
   opacity: 1;
   pointer-events: auto;
+}
+
+@keyframes anime {
+  0% {
+    width: 600px;
+    height: 400px;
+    background: #f0f0f0;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  12.5% {
+    width: 60px;
+    height: 400px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  25% {
+    width: 60px;
+    height: 60px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  45% {
+    width: 60px;
+    height: 60px;
+    background: #a1d1c2;
+    transform: rotate(20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  50% {
+    width: 60px;
+    height: 60px;
+    background: #92d6c0;
+    transform: rotate(-20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  52.5% {
+    width: 60px;
+    height: 60px;
+    background: #7fd4b9;
+    transform: rotate(10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  55% {
+    width: 60px;
+    height: 60px;
+    background: #6ed6b5;
+    transform: rotate(-10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  87.5% {
+    width: 60px;
+    height: 400px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  100% {
+    width: 600px;
+    height: 400px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
 }
 
 @media (max-width: 800px) {
