--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ body {
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
 .section.main {
   width: 100%;
+  background-color: #e9e1e1;
 }
 
 .main .wrap {
@@ -100,6 +101,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #e9e1e1;
 }
 
 .main h1 {
@@ -597,7 +599,7 @@ body {
 /* Projects */
 .section.projects {
   width: 100%;
-  background-color: #fff;
+  background-color: #e9e1e1;
 }
 
 .projects .wrap {
@@ -605,6 +607,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  background-color: #e9e1e1;
 }
 
 .projects-container {
@@ -701,29 +704,26 @@ body {
   margin: 0;
   width: 100%;
   height: 85%;
-  transition: all 0.5s ease;
-}
-
-.projects-container .project-list .projects-list-wrap {
-  /* 임의로 맞춤.. */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
   background-color: #2c343f;
-  padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   transition: all 0.5s ease;
+  padding: 0 20px;
+}
+
+.project-list .projects-list-wrap {
+  display: flex;
+  align-items: center;
 }
 
 .project-list .projects-list-wrap .project-each {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background-color: #f5c156;
-  width: 320px;
-  height: 200px;
+  width: 200px;
+  max-height: 240px;
   border: #333 1px solid;
   border-radius: 10px;
   padding: 10px 0;
@@ -731,34 +731,17 @@ body {
   margin-right: 30px;
 }
 
-.project-each .image-container-left {
-  margin-left: 30px;
-  position: relative;
-}
-
-.project-each .image-container-left .each-project-img {
+.project-each .image-link .each-project-img {
   width: 130px;
   height: 170px;
   cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
   transition: 0.5s ease;
 }
 
-.project-each .image-container-left .each-project-gif {
+.project-each .image-link .each-project-gif {
   width: 130px;
   height: 170px;
   transition: 0.5s ease;
-}
-.project-each .image-container-left:hover .each-project-img {
-  width: 400px;
-  height: 500px;
-  opacity: 0;
-}
-.project-each .image-container-left:hover .each-project-gif {
-  width: 400px;
-  height: 500px;
 }
 
 .project-each .des-container-right {
@@ -836,7 +819,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 25%;
+  width: 20%;
   height: 100%;
   min-width: 400px;
   min-height: 210px;
