--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .section {
@@ -760,6 +760,9 @@ body {
   z-index: 200;
   background-color: rgba(0, 0, 0, 0.4);
 }
+.section.projects .modal:hover {
+  overflow: hidden;
+}
 
 .section.projects .modal .modal-contents {
   width: 1000px;
@@ -768,8 +771,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: #f5c156;
   border-radius: 10px;
+  border: 3px solid midnightblue;
 }
 
 .modal .modal-contents .modal-project-left {
@@ -786,32 +790,49 @@ body {
 }
 
 .modal-contents .modal-divide {
-  width: 1.5px;
-  height: 80%;
-  background-color: #000;
+  width: 3px;
+  height: 85%;
+  background-color: midnightblue;
   margin: 0 20px;
+  border-radius: 1.5px;
 }
 
 .modal .modal-contents .modal-project-right {
   width: 65%;
   height: 100%;
   position: relative;
-}
-
-.modal-contents .modal-project-right {
+  padding: 35px 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
 }
 
+.modal-contents .modal-project-right .modal-project-title {
+  height: 30px;
+  line-height: 30px;
+  font-size: 19px;
+}
+
 .modal-contents .modal-project-right .modal-project-tag {
-  width: 100px;
+  height: 30px;
+  position: absolute;
+  top: 35px;
+  right: 50px;
+  width: fit-content;
   font-size: 15px;
   padding: 5px 10px;
   background-color: #333;
   color: #fff;
   border-radius: 5px;
+}
+
+.modal-contents .modal-project-right .modal-project-description {
+  padding-right: 50px;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-contents .modal-project-right .modal-project-stacks {
@@ -836,6 +857,12 @@ body {
   right: 10px;
   top: 10px;
   cursor: pointer;
+  border: none;
+  background-color: #fff;
+  box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.3);
+  color: #f5c156;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .section.projects .modal.hidden {
@@ -848,6 +875,7 @@ body {
   color: #fff;
   width: 100%;
   flex-direction: column;
+  z-index: 101;
 }
 
 .section.contact .wrap {
